--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ckpack/vue-color": "^1.5.0",
     "@mdi/font": "^7.3.67",
+    "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "vue": "^3.3.13",
